--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 ---
 layout: page
-title: My website
+title: kisa.com
 subtitle: This is where I will tell my friends way too much about me
 use-site-title: true
 ---
+
+Test
+
 
 <div class="posts-list">
   {% for post in paginator.posts %}
