--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 ---
 layout: page
 title: kisa.com
-subtitle: This is where I will tell my friends way too much about me
 use-site-title: true
 ---
 
-* This is just fun
-
 <div class="jumbotron">
   <h1 class="display-4">Hello, world!</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <p class="lead">Looking for kisaphone?  Press the pretty blue button below and we will redirect you to their site.  Please note that kisa.com is not affiliated with kisaphone or their subsidiaries.</p>
   <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+  <a class="btn btn-primary btn-lg" href="https://www.kisaphone.com.au/" role="button">KISA Phone</a>
 </div>
 
