* Fixed up Hello World Rubbish

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@ use-site-title: true
 ---
 
 <div class="jumbotron">
-  <h1 class="display-4">Hello, world!</h1>
   <p class="lead">Looking for kisaphone?  Press the pretty blue button below and we will redirect you to their site.  Please note that kisa.com is not affiliated with kisaphone or their subsidiaries.</p>
   <hr class="my-4">
-  <a class="btn btn-primary btn-lg" href="https://www.kisaphone.com.au/" role="button">KISA Phone</a>
+  <a class="btn btn-success btn-lg" href="https://www.kisaphone.com.au/" role="button">KISA Phone</a>
 </div>
 
