--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@ use-site-title: true
 <div class="jumbotron">
   <p class="lead">Looking for kisaphone?  Press the pretty green button below and we will redirect you to their site.  Please note that kisa.com is not affiliated with kisaphone or their subsidiaries.</p>
   <hr class="my-4">
-  <a class="btn btn-success btn-lg" href="https://www.kisaphone.com.au/" role="button">KISA Phone</a>
+  <a class="btn btn-success btn-lg center-block" href="https://www.kisaphone.com.au/" role="button">KISA Phone</a>
 </div>
 
